# cloud-copy

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: CI.yml
src/: backend.rs  cli.rs  config.rs  generator.rs  lib.rs  main.rs  os.rs  pool.rs  streams.rs  transfer.rs
src/backend/: auth.rs  azure.rs  generic.rs  google.rs  s3.rs
src/backend/auth/: azure.rs  s3.rs
src/os/: unix.rs  windows.rs
src/sys/: unix.rs  windows.rs
tests/: copy.rs
